<resources>
    <!--<string name="app_name">快8速运</string>-->
    <string name="app_name">快8电子合同</string>
    <string name="login">登录</string>
    <string name="please_input_username">请输入用户名</string>
    <string name="please_input_password">请输入密码</string>
    <string name="choose_province">选择省级</string>
    <string name="choose_prefecture_level_citys">选择地级市</string>
    <string name="choose_districts_counties">选择区、县</string>
    <string name="choose_net_point">选择网点</string>
    <string name="please_choose">请选择</string>
    <string name="pay_way">支付方式</string>
    <string name="commit">提交</string>
    <string name="photo">拍照</string>
    <string name="cancel">取消</string>
    <string name="sign_contract">签订合同</string>
    <string name="find_password">找回密码</string>
    <string name="phone">手机</string>
    <string name="verification_code">验 证 码：</string>
    <string name="new_code">新 密 码：</string>
    <string name="comfirm_password">确认密码：</string>
    <string name="apply_net_point">申请网点</string>
    <string name="last">上一步</string>
    <string name="next">下一步</string>
    <string name="clear">清除</string>
    <string name="cash_paymengt">现金支付</string>
    <string name="home_page">首页</string>
    <string name="my">我的</string>
    <string name="order">订单</string>
    <string name="insert_order">查询订单</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mine_integral">我的积分</string>
    <string name="mine_feedback">我的反馈</string>
    <string name="successful_sign">签订成功</string>
    <string name="set_password">设置密码</string>
    <string name="comfirm">确定</string>
    <string name="order_manage">订单管理</string>
    <string name="completed">已完成</string>
    <string name="uncompleted">未完成</string>
    <string name="my_bill">我的账单</string>
    <string name="my_benefits">我的收益</string>
    <string name="my_penalty">我的罚款</string>
    <string name="my_post_station">我的驿站</string>
    <string name="dys_function">功能异常</string>
    <string name="opinions_and_suggestions">意见与反馈</string>
    <string name="open_trumpet">开通小号</string>
    <string name="my_dispatch">我的派件</string>
    <string name="dispatched">已派件</string>
    <string name="undispatched">未派件</string>
    <string name="warehouse_retention">留仓件</string>
    <string name="damaged_parts">已损件</string>
    <string name="question_piece">问题件</string>
    <string name="share_friends">推荐好友</string>
    <string name="network_supervision">网点监管</string>
    <string name="help_center">帮助中心</string>
    <string name="my_contract">我的合同</string>
    <string name="customer_phone">400-115-9979</string>
	<string name="my_message">我的留言</string>
	<string name="setting">设置</string>
</resources>
