<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/white">

            <TextView
                android:layout_width="@dimen/dp_85"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="手      机："
                android:textColor="#666666"
                android:textSize="16sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:hint="请输入11位手机号码"
                android:textColorHint="#999999"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#eaeaea"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/white">

            <TextView
                android:layout_width="@dimen/dp_85"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/verification_code"
                android:textColor="#666666"
                android:textSize="16sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:hint="请输入验证码"
                android:textColorHint="#999999"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#eaeaea"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/white">

            <TextView
                android:layout_width="@dimen/dp_85"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/new_code"
                android:textColor="#666666"
                android:textSize="16sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:hint="请输入新密码"
                android:textColorHint="#999999"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#eaeaea"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/white">

            <TextView
                android:layout_width="@dimen/dp_85"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/comfirm_password"
                android:textColor="#666666"
                android:textSize="16sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:hint="再次确认新密码"
                android:textColorHint="#999999"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_login"
        android:layout_width="@dimen/dp_300"
        android:layout_height="@dimen/dp_49"
        android:layout_below="@+id/ll_input_pwd"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="40dp"
        android:background="@drawable/corner_24_login_drawable">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>
</RelativeLayout>