<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/ll_bar"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:visibility="gone"></LinearLayout>

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="@dimen/dp_15"
        android:layout_height="@dimen/dp_15"
        android:layout_below="@id/ll_bar"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/close_black" />

    <TextView
        android:id="@+id/tvContract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_close"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        android:textColor="#333333"
        android:textSize="26sp" />

    <LinearLayout
        android:id="@+id/ll_username_input"
        android:layout_width="@dimen/dp_300"
        android:layout_height="@dimen/dp_49"
        android:layout_below="@+id/tvContract"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginRight="40dp"
        android:background="@drawable/login_username_drawable">

        <ImageView
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_17"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="35dp"
            android:src="@drawable/login_user_icon" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:hint="@string/please_input_username"
            android:textColorHint="#cccccc"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_input_pwd"
        android:layout_width="@dimen/dp_300"
        android:layout_height="@dimen/dp_49"
        android:layout_below="@+id/ll_username_input"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="40dp"
        android:background="@drawable/login_username_drawable">

        <ImageView
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_18"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="35dp"
            android:src="@drawable/login_pwd" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:digits="1234567890"
            android:hint="@string/please_input_password"
            android:inputType="textPassword"
            android:textColorHint="#cccccc"
            android:textSize="17sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_login"
        android:layout_width="@dimen/dp_300"
        android:layout_height="@dimen/dp_49"
        android:layout_below="@+id/ll_input_pwd"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="40dp"
        android:background="@drawable/corner_24_login_drawable">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tvForgetPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_login"
        android:layout_alignRight="@id/rl_login"
        android:layout_marginTop="18dp"
        android:layout_marginRight="@dimen/dp_20"
        android:text="忘记密码？"
        android:textColor="#999999"
        android:textSize="16sp"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_login"
        android:layout_marginTop="@dimen/dp_80">

        <ImageView
            android:id="@+id/ivNetApply"
            android:layout_width="@dimen/dp_180"
            android:layout_height="@dimen/dp_40"
            android:layout_centerInParent="true"
            android:src="@drawable/login_apply" />
    </RelativeLayout>

</RelativeLayout>